# pipetool

./: .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  README.md
include/pipetool/: file_sender.hpp  logging.hpp  pipe_client.hpp  pipe_info.hpp  random_sender.hpp
src/: file_sender.cpp  logging.cpp  main.cpp  pipe_client.cpp  pipe_info.cpp  random_sender.cpp
